[gd_scene load_steps=17 format=3 uid="uid://bfmwcmbdbbhu1"]

[ext_resource type="Texture2D" uid="uid://c8j47tytjwto4" path="res://Assets/Player/Weapons/arrow.png" id="1_mrf8c"]
[ext_resource type="Script" path="res://Main/Player/Weapons/arrow.gd" id="1_yhlia"]
[ext_resource type="Texture2D" uid="uid://cbn76nvxe5v08" path="res://Assets/Particles/feather.png" id="3_hneo8"]
[ext_resource type="AudioStream" uid="uid://cs4a6eymyk1ub" path="res://Assets/SFX/Weapons/Bow/arrow_flying.wav" id="4_60uhw"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fm5q5"]
load_path = "res://.godot/imported/arrow.png-81fac28a0f0c711fa988b36b6fb28f34.ctex"

[sub_resource type="BoxShape3D" id="BoxShape3D_wi8iq"]
size = Vector3(0.05, 0.05, 0.2)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_kdesm"]
load_path = "res://.godot/imported/circle_pixel_particle.png-998d2619f23a852ee3aa9671a15ec5e6.s3tc.ctex"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1mqev"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = SubResource("CompressedTexture2D_kdesm")
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_hp8ay"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("StandardMaterial3D_1mqev")
size = Vector2(1, 1)
orientation = 0

[sub_resource type="Curve" id="Curve_2j16w"]
_data = [Vector2(0, 0.396226), 0.0, 0.0, 0, 0, Vector2(1, 0.501887), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_cvd23"]
offsets = PackedFloat32Array(0, 0.580357, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ruxt4"]
transparency = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_hneo8")
texture_filter = 0

[sub_resource type="PlaneMesh" id="PlaneMesh_sjyqw"]
lightmap_size_hint = Vector2i(7, 7)
material = SubResource("StandardMaterial3D_ruxt4")
size = Vector2(1, 1)
orientation = 2

[sub_resource type="Curve" id="Curve_ndep0"]
_data = [Vector2(0, 0.396226), 0.0, 0.0, 0, 0, Vector2(1, 0.501887), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_fvcna"]
offsets = PackedFloat32Array(0, 0.580357, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Curve" id="Curve_2hi83"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ArrowBody3D" type="RigidBody3D"]
gravity_scale = 0.0
script = ExtResource("1_yhlia")
speed_multiplier = 3.0

[node name="Lifetime" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)

[node name="ArrowSprite1" type="Sprite3D" parent="Node3D"]
texture_filter = 0
texture = ExtResource("1_mrf8c")

[node name="ArrowSprite2" type="Sprite3D" parent="Node3D"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
texture_filter = 0
texture = SubResource("CompressedTexture2D_fm5q5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_wi8iq")

[node name="circleVFX" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -6.05749e-09, 6.05748e-09, 0.138579)
amount = 3
lifetime = 0.5
mesh = SubResource("PlaneMesh_hp8ay")
emission_shape = 1
emission_sphere_radius = 0.03
particle_flag_rotate_y = true
gravity = Vector3(0, 0, 0)
angle_min = 90.0
angle_max = 90.0
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_2j16w")
color_ramp = SubResource("Gradient_cvd23")

[node name="feathersVFX" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.05749e-09, 6.05748e-09, 0.138579)
amount = 6
lifetime = 0.5
mesh = SubResource("PlaneMesh_sjyqw")
emission_shape = 1
emission_sphere_radius = 0.03
spread = 0.0
gravity = Vector3(0, 0, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
scale_amount_min = 0.1
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_ndep0")
color_ramp = SubResource("Gradient_fvcna")
hue_variation_min = -0.1
hue_variation_max = 0.05
hue_variation_curve = SubResource("Curve_2hi83")

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, -0.137166)
volume_db = 10.0
max_db = 6.0
pitch_scale = 3.0
max_distance = 1.2
emission_angle_enabled = true
doppler_tracking = 2

[node name="flyingSFX" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.13074)
stream = ExtResource("4_60uhw")
attenuation_model = 1
max_distance = 2.0
doppler_tracking = 2

[connection signal="timeout" from="Lifetime" to="." method="_on_lifetime_timeout"]
